Добавляє зміни по .git

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countries</title>
-  </head>
-  <body>
-    <div class="form">
-      <input type="text" class="form-entre" name="query"/> 
 
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Countries</title>
+</head>
 
-    <div class="js-card-container">
-      
-    </div>
+<body>
+  <div class="form">
+    <input type="text" class="form-enter js-form-enter" name="query" />
 
-    <script src="index.js"></script>
-  </body>
+  </div>
+
+  <div class="js-card-container">
+
+  </div>
+
+  <script src="index.js"></script>
+</body>
+
 </html>
