--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Countries</title>
+  <link href="" rel="stylesheet">
 </head>
 
 <body>
+  <h1 class="title">Directory of countries.</h1>
   <div class="form">
-    <input type="text" class="form-enter js-form-enter" name="query" />
+    <input type="text" class="form-enter js-form-enter" name="query" placeholder="Enter the country name"/>
 
   </div>
 
